# chatty2

./: .gitignore  AGENTS.md  AGENT_REFACTOR_PLAN.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE.md  TECHNICAL_DEBT_REDUCTION.md  build.rs  plan.md  readme.md
crates/chatty-browser/: Cargo.toml  build.rs
crates/chatty-browser/src/: constants.rs  devtools.rs  engine.rs  error.rs  gpui_globals.rs  http_fallback.rs  lib.rs  page.rs  page_repr.rs  session.rs  utils.rs
crates/chatty-browser/src/backend/: mod.rs  wry_backend.rs
crates/chatty-browser/src/credential/: mod.rs  session_capture.rs  types.rs  vault.rs
crates/chatty-browser/src/settings/: browser_credentials.rs  browser_settings.rs  login_profiles.rs  mod.rs
crates/chatty-browser/src/tools/: browse_tool.rs  browser_action_tool.rs  browser_auth_tool.rs  browser_extract_tool.rs  browser_tabs_tool.rs  mod.rs
crates/chatty-core/: Cargo.toml  README.md  build.rs
crates/chatty-core/src/: curated_mcp.rs  gpui_globals.rs  install.rs  lib.rs  migration.rs
crates/chatty-core/src/auth/: azure_auth.rs  azure_token_cache.rs  mod.rs
crates/chatty-core/src/exporters/: atif_exporter.rs  jsonl_exporter.rs
crates/chatty-core/src/exporters/atif_exporter/: mod.rs  steps.rs  tests.rs
crates/chatty-core/src/exporters/snapshots/: full_conversation.json
crates/chatty-core/src/factories/: agent_factory.rs  mod.rs
crates/chatty-core/src/factories/agent_factory/: mcp_helpers.rs  mod.rs  preamble_builder.rs  provider_builder.rs  tool_collector.rs  tool_registry.rs
crates/chatty-core/src/models/: attachment_validation.rs  conversation.rs  conversations_store.rs  error_store.rs  execution_approval_store.rs  message_types.rs  mod.rs  write_approval_store.rs
crates/chatty-core/src/repositories/: conversation_repository.rs  conversation_sqlite_repository.rs  error.rs  in_memory_repository.rs  mod.rs
crates/chatty-core/src/sandbox/: backend.rs  docker.rs  manager.rs  mod.rs  monty.rs  monty_bridge.rs
crates/chatty-core/src/services/: a2a_client.rs  agent_loop_guard.rs  agent_task_controller.rs  auto_context.rs  chart_svg_renderer.rs  context_shaper.rs  embedding_service.rs  error_collector_layer.rs  filesystem_service.rs  git_service.rs  http_client.rs  llm_service.rs  math_renderer_service.rs  mcp_service.rs  mcp_token_store.rs  memory_query.rs  memory_service.rs  mermaid_renderer_service.rs  message_orchestrator.rs  mod.rs  pdf_thumbnail.rs  pdfium_utils.rs  search_service.rs  shell_service.rs  skill_service.rs  stream_processor.rs  title_generator.rs
crates/chatty-core/src/services/shell_service/: mod.rs  tests.rs
crates/chatty-core/src/settings/: mod.rs
crates/chatty-core/src/settings/models/: a2a_store.rs  browser_credentials_store.rs  execution_settings.rs  extensions_store.rs  general_model.rs  (+10 more)
crates/chatty-core/src/token_budget/: cache.rs  counter.rs  mod.rs  snapshot.rs  summarizer.rs
crates/chatty-core/src/tools/: add_attachment_tool.rs  add_mcp_tool.rs  agent_todo_tool.rs  browser_use_tool.rs  chart_tool.rs  dabstep_reference_tool.rs  data_query_tool.rs  daytona_tool.rs  delete_mcp_tool.rs  doc_retriever_tool.rs  edit_mcp_tool.rs  env_serde.rs  excel_tool.rs  execute_code_tool.rs  fetch_tool.rs  file_structure_tool.rs  filesystem_tool.rs  filesystem_write_tool.rs  git_tool.rs  invoke_agent_tool.rs  list_agents_tool.rs  list_mcp_tool.rs  list_tools_tool.rs  mod.rs  path_utils.rs  pdf_extract_text_tool.rs  pdf_info_tool.rs  pdf_to_image_tool.rs  publish_module_tool.rs  read_skill_tool.rs  remember_tool.rs  save_skill_tool.rs  search_memory_tool.rs  search_tool.rs  search_web_tool.rs  shell_tool.rs  sub_agent_tool.rs  test_helpers.rs  typst_tool.rs
crates/chatty-core/tests/: integration.rs
crates/chatty-gpui/: Cargo.toml  README.md  build.rs
crates/chatty-gpui/src/: actions.rs  assets.rs  cli_installer.rs  feature_flags.rs  global_entity.rs  main.rs  subtle_guidance.rs  themes.rs
crates/chatty-gpui/src/auto_updater/: download.rs  installer.rs  mod.rs  network.rs  platform.rs  tests.rs
crates/chatty-gpui/src/chatty/: mod.rs
crates/chatty-gpui/src/settings/: mod.rs
crates/chatty-gpui/tests/: core_integration.rs
crates/chatty-module-registry/: Cargo.toml  README.md
crates/chatty-module-registry/examples/: load_test.rs
crates/chatty-module-registry/src/: lib.rs  manifest.rs  registry.rs
crates/chatty-module-sdk/: Cargo.toml  README.md
crates/chatty-module-sdk/src/: lib.rs
crates/chatty-module-sdk/wit/: chatty-module.wit
crates/chatty-protocol-gateway/: Cargo.toml  README.md
crates/chatty-protocol-gateway/src/: gateway.rs  lib.rs
crates/chatty-protocol-gateway/src/handlers/: a2a.rs  index.rs  jsonrpc.rs  mcp.rs  mod.rs  openai.rs
crates/chatty-protocol-gateway/tests/: echo_agent_e2e.rs  gateway_tests.rs
crates/chatty-tui/: Cargo.toml  README.md
crates/chatty-tui/src/: app.rs  engine.rs  events.rs  headless.rs  main.rs
crates/chatty-tui/src/engine/: commands.rs  helpers.rs  mod.rs  streaming.rs
crates/chatty-tui/src/headless/: answer_file.rs  mod.rs  recovery.rs  tests.rs  tool_format.rs
crates/chatty-tui/src/ui/: approval.rs  at_menu.rs  chat_view.rs  hint_bar.rs  input.rs  mod.rs  model_picker.rs  slash_menu.rs  status_bar.rs  theme.rs  tool_picker.rs
crates/chatty-wasm-runtime/: Cargo.toml  README.md
crates/chatty-wasm-runtime/src/: host.rs  lib.rs  limits.rs  module.rs
crates/hive-billing-sdk/: CHANGELOG.md  Cargo.toml  IMPLEMENTATION.md  README.md
crates/hive-billing-sdk/src/: lib.rs
crates/hive-billing-sdk/tests/: jwt_tests.rs
crates/hive-client/: Cargo.toml  README.md
crates/hive-client/src/: cache.rs  client.rs  credit_guard.rs  error.rs  lib.rs  models.rs  usage.rs  verify.rs
examples/echo-agent/: Cargo.toml  README.md  manifest.toml
examples/echo-agent/src/: lib.rs
modules/echo-agent/: Cargo.toml  README.md  module.toml
modules/echo-agent/src/: lib.rs
templates/module/: Cargo.toml  LICENSE  README.md  cargo-generate.toml  module.toml
templates/module/.github/workflows/: ci.yml
templates/module/src/: lib.rs
(+424 files in other folders)
