[package]
name = "chatty"
version = "0.1.20"
edition = "2024"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
rig-core = "0.30.0"
rmcp = { version = "0.13", features = ["client", "macros", "transport-child-process"] }
nix = { version = "0.29", features = ["signal"] }

# Persistence layer dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "fs", "macros"] }
dirs = "5.0"
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4"] }

# Chat functionality dependencies
futures = "0.3"
anyhow = "1.0"
regex = "1.10"
base64 = "0.22"
async-stream = "0.3"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json", "stream"] }
glob = "0.3"
similar = "2.2"

# Auto-updater dependencies
semver = "1.0"
tempfile = "3.10"
flate2 = "1.0"
tar = "0.4"
sha2 = "0.10"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"

# Azure authentication for Entra ID
azure_identity = "0.20"
azure_core = "0.20"

# Asset embedding
rust-embed = "8.0"

# pdf and image upload
pdfium-render = "0.8.37"
image = "0.25"

# Math rendering with Typst
typst = "0.14.2"
typst-svg = "0.14.2"
mitex = "0.2"
typst-assets = { version = "0.14.2", features = ["fonts"] }
comemo = "0.4"

# Syntax highlighting
syntect = "5.3"
once_cell = "1.19"

[target."cfg(unix)".dependencies]
nix = { version = "0.29", features = ["signal"] }

[build-dependencies]
# Windows icon embedding
winres = "0.1"
# Pdfium library download
reqwest = { version = "0.13.2", features = ["blocking", "rustls"] }
flate2 = "1.0"
tar = "0.4"


[features]
default = ["mcp"]
mcp = ["rig-core/rmcp"]
