[workspace]
members = ["crates/chatty-core", "crates/chatty-gpui", "crates/chatty-tui"]
resolver = "2"

[workspace.package]
version = "0.1.112"
edition = "2024"

[workspace.dependencies]
# Core agent dependencies
rig-core = "0.32.0"
rmcp = { version = "0.16", features = ["client", "macros", "transport-child-process"] }

# Persistence layer
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "fs", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
dirs = "5.0"
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4"] }

# Docker sandbox
bollard = "0.17"
async-trait = "0.1"

# Chat functionality
futures = "0.3"
anyhow = "1.0"
regex = "1.10"
base64 = "0.22"
async-stream = "0.3"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json", "stream", "query"] }
glob = "0.3"
similar = "2.2"

# Auto-updater
semver = "1.0"
tempfile = "3.10"
flate2 = "1.0"
tar = "0.4"
sha2 = "0.10"

# Date/time formatting
chrono = { version = "0.4", default-features = false, features = ["std"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"

# Azure authentication
azure_identity = "0.20"
azure_core = "0.20"

# Asset embedding
rust-embed = "8.0"

# PDF and image
pdfium-render = "0.8.37"
image = "0.25"

# Excel
calamine = "0.33"
rust_xlsxwriter = "0.93"

# DuckDB
duckdb = { version = "1.4", features = ["parquet", "json", "bundled"] }

# Math rendering
typst = "0.14.2"
typst-svg = "0.14.2"
typst-pdf = "0.14.2"
mitex = "0.2"
typst-assets = { version = "0.14.2", features = ["fonts"] }
comemo = "0.4"

# Mermaid / SVG
mermaid-rs-renderer = { version = "0.2", default-features = false }
resvg = "0.45"
usvg = "0.45"

# Syntax highlighting
ropey = "2.0.0-beta.1"

# Token counting
tiktoken-rs = "0.9"

# Agent memory
memvid-core = { version = "2.0", default-features = false, features = ["lex", "vec", "temporal_track"] }

# GPUI (UI only)
gpui = "0.2.2"
gpui-component = { version = "0.5.1", features = ["tree-sitter-languages"] }
gpui-component-assets = "0.5.1"

# TUI framework
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = "0.7"
clap = { version = "4.5", features = ["derive"] }

# Unix-specific
nix = { version = "0.29", features = ["signal"] }

# Patch esaxx-rs to remove hardcoded .static_crt(true) which forces /MT on
# Windows and conflicts with DuckDB bundled's default /MD CRT (LNK2038).
[patch.crates-io]
esaxx-rs = { path = "vendor/esaxx-rs" }
