[workspace]
members = [
    "crates/chatty-core",
    "crates/chatty-gpui",
    "crates/chatty-tui",
    "crates/chatty-wasm-runtime",
    "crates/chatty-module-registry",
    "crates/chatty-protocol-gateway",
    "crates/hive-client",
]
resolver = "2"

[workspace.package]
version = "0.3.15"
edition = "2024"

[workspace.dependencies]
# Core agent dependencies
rig-core = "0.35.0"
rmcp = { version = "1.4", features = ["client", "macros", "transport-streamable-http-client-reqwest", "auth"] }

# Persistence layer
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "fs", "macros", "process", "io-util"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
dirs = "5.0"
uuid = { version = "1.23.0", features = ["v4"] }

# Docker sandbox
bollard = "0.20.2"
async-trait = "0.1"

# Chat functionality
futures = "0.3"
anyhow = "1.0"
regex = "1.12.3"
base64 = "0.22"
async-stream = "0.3"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json", "stream", "query"] }
glob = "0.3"
similar = "2.7.0"

# Auto-updater
semver = "1.0"
tempfile = "3.10"
flate2 = "1.0"
tar = "0.4"
sha2 = "0.11"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
percent-encoding = "2"

# Date/time formatting
chrono = { version = "0.4", default-features = false, features = ["std"] }

# Mutex without poisoning
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
thiserror = "1.0"

# Azure authentication
azure_identity = "0.20"
azure_core = "0.20"

# Asset embedding
rust-embed = "8.0"

# PDF and image
pdfium-render = "0.9.0"
image = "0.25"

# Excel
calamine = "0.34.0"
rust_xlsxwriter = "0.94.0"

# DuckDB
duckdb = { version = "1.10500.0", features = ["parquet", "json", "bundled"] }

# Math rendering
typst = "0.14.2"
typst-svg = "0.14.2"
typst-pdf = "0.14.2"
mitex = "0.2.4"
typst-assets = { version = "0.14.2", features = ["fonts"] }
comemo = "0.4"

# Mermaid / SVG
mermaid-rs-renderer = { version = "0.2", default-features = false }
resvg = "0.47.0"
usvg = "0.47.0"

# Syntax highlighting
# Pinned to match gpui-component's required version (=2.0.0-beta.1).
ropey = { version = "=2.0.0-beta.1", features = ["metric_lines_lf", "metric_utf16"] }

# Token counting
tiktoken-rs = "0.9.1"

# Agent memory
memvid-core = { version = "2.0.139", default-features = false, features = ["lex", "temporal_track"] }

# GPUI (UI only)
gpui = "0.2.2"
gpui-component = { version = "0.5.1", features = ["tree-sitter-languages"] }
gpui-component-assets = "0.5.1"

# TUI framework
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tui-textarea = { package = "tui-textarea-2", version = "0.10.2" }
clap = { version = "4.6.0", features = ["derive"] }

# Unix-specific
nix = { version = "0.29", features = ["signal"] }

