[package]
name = "chatty-core"
version.workspace = true
edition.workspace = true

[dependencies]
# Core agent dependencies
rig-core.workspace = true
rmcp.workspace = true

# Persistence layer
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
sqlx.workspace = true
dirs.workspace = true
lazy_static.workspace = true
uuid.workspace = true

# Docker sandbox
bollard.workspace = true
async-trait.workspace = true

# Chat functionality
futures.workspace = true
anyhow.workspace = true
regex.workspace = true
base64.workspace = true
async-stream.workspace = true
reqwest.workspace = true
glob.workspace = true
similar.workspace = true

# Date/time
chrono.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true

# Crypto
sha2.workspace = true

# Azure authentication
azure_identity.workspace = true
azure_core.workspace = true

# PDF and image
pdfium-render.workspace = true
image.workspace = true

# Excel
calamine.workspace = true
rust_xlsxwriter.workspace = true

# DuckDB
duckdb.workspace = true

# Math rendering
typst.workspace = true
typst-svg.workspace = true
typst-pdf.workspace = true
mitex.workspace = true
typst-assets.workspace = true
comemo.workspace = true

# Mermaid / SVG
mermaid-rs-renderer.workspace = true
resvg.workspace = true
usvg.workspace = true

# Token counting
tiktoken-rs.workspace = true

# Agent memory
memvid-core.workspace = true

# Temporary: keeping these until we fully separate
tempfile.workspace = true

[target."cfg(unix)".dependencies]
nix.workspace = true

# Optional: GPUI integration (provides `impl Global` for core types)
gpui = { workspace = true, optional = true }

[build-dependencies]
# Pdfium library download
reqwest = { version = "0.13.2", features = ["blocking", "rustls"] }
flate2 = "1.0"
tar = "0.4"

[features]
default = ["mcp"]
mcp = ["rig-core/rmcp"]
# Enable this feature to get `impl gpui::Global` on core types.
# A future TUI crate would NOT enable this feature.
gpui-globals = ["dep:gpui"]
