[package]
name = "chatty-core"
version.workspace = true
edition.workspace = true

[dependencies]
# Core agent dependencies
rig-core.workspace = true
rmcp.workspace = true

# Persistence layer
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
sqlx.workspace = true
dirs.workspace = true
uuid.workspace = true

# Docker sandbox
bollard.workspace = true
async-trait.workspace = true

# Chat functionality
futures.workspace = true
anyhow.workspace = true
regex.workspace = true
base64.workspace = true
async-stream.workspace = true
reqwest.workspace = true
glob.workspace = true
similar.workspace = true

# Date/time
chrono.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true

# Crypto
sha2.workspace = true

# Azure authentication
azure_identity.workspace = true
azure_core.workspace = true

# PDF and image (optional — enable with "pdf" feature)
pdfium-render = { workspace = true, optional = true }
image = { workspace = true, optional = true }

# Excel (optional — enable with "excel" feature)
calamine = { workspace = true, optional = true }
rust_xlsxwriter = { workspace = true, optional = true }

# DuckDB (optional — enable with "duckdb" feature)
duckdb = { workspace = true, optional = true }

# Math rendering (optional — enable with "math-render" feature)
typst = { workspace = true, optional = true }
typst-svg = { workspace = true, optional = true }
typst-pdf = { workspace = true, optional = true }
mitex = { workspace = true, optional = true }
typst-assets = { workspace = true, optional = true }
comemo = { workspace = true, optional = true }

# Mermaid / SVG (optional — enable with "mermaid" feature)
mermaid-rs-renderer = { workspace = true, optional = true }
resvg = { workspace = true, optional = true }
usvg = { workspace = true, optional = true }

# Token counting
tiktoken-rs.workspace = true

# Agent memory
memvid-core.workspace = true

# Hive registry client
hive-client = { path = "../hive-client" }

# Temporary: keeping these until we fully separate
tempfile.workspace = true

[target."cfg(unix)".dependencies]
nix.workspace = true

# Optional: GPUI integration (provides `impl Global` for core types)
gpui = { workspace = true, optional = true }

[build-dependencies]
# Pdfium library download
reqwest = { version = "0.13.2", features = ["blocking", "rustls"] }
flate2 = "1.0"
tar = "0.4"

[features]
default = ["mcp", "all-tools"]
mcp = ["rig-core/rmcp"]
# Enable this feature to get `impl gpui::Global` on core types.
# A future TUI crate would NOT enable this feature.
gpui-globals = ["dep:gpui"]
# Optional tool/service feature groups
excel = ["dep:calamine", "dep:rust_xlsxwriter"]
pdf = ["dep:pdfium-render", "dep:image"]
math-render = ["dep:typst", "dep:typst-svg", "dep:typst-pdf", "dep:mitex", "dep:typst-assets", "dep:comemo"]
mermaid = ["dep:mermaid-rs-renderer", "dep:resvg", "dep:usvg"]
duckdb = ["dep:duckdb"]
# Convenience: enable all optional tool dependencies
all-tools = ["excel", "pdf", "math-render", "mermaid", "duckdb"]
