[package]
name = "chatty-gpui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "chatty"
path = "src/main.rs"

[dependencies]
chatty-core = { path = "../chatty-core", features = ["gpui-globals"] }
chatty-browser = { path = "../chatty-browser", features = ["gpui-globals"] }

# GPUI framework
gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true

# Core dependencies (shared with chatty-core, needed directly by GPUI layer)
rig-core.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
sqlx.workspace = true
dirs.workspace = true
lazy_static.workspace = true
uuid.workspace = true
bollard.workspace = true
async-trait.workspace = true
futures.workspace = true
anyhow.workspace = true
regex.workspace = true
base64.workspace = true
async-stream.workspace = true
reqwest.workspace = true
glob.workspace = true
similar.workspace = true

# Auto-updater
semver.workspace = true
tempfile.workspace = true
flate2.workspace = true
tar.workspace = true
sha2.workspace = true

# Date/time
chrono.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true

# Azure authentication
azure_identity.workspace = true
azure_core.workspace = true

# Asset embedding
rust-embed.workspace = true

# PDF and image
pdfium-render.workspace = true
image.workspace = true

# Excel
calamine.workspace = true
rust_xlsxwriter.workspace = true

# Math rendering
typst.workspace = true
typst-svg.workspace = true
typst-pdf.workspace = true
mitex.workspace = true
typst-assets.workspace = true
comemo.workspace = true

# Mermaid / SVG
mermaid-rs-renderer.workspace = true
resvg.workspace = true
usvg.workspace = true

# Syntax highlighting
ropey.workspace = true

# Token counting
tiktoken-rs.workspace = true

[target."cfg(unix)".dependencies]
nix.workspace = true

[build-dependencies]
# Windows icon embedding
winres = "0.1"
# Pdfium library download
reqwest = { version = "0.13.2", features = ["blocking", "rustls"] }
flate2 = "1.0"
tar = "0.4"

[features]
default = ["mcp"]
mcp = ["chatty-core/mcp", "rig-core/rmcp"]
