[package]
name = "chatty-gpui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "chatty"
path = "src/main.rs"

[dependencies]
chatty-core = { path = "../chatty-core", features = ["gpui-globals", "all-tools"] }
chatty-module-registry = { path = "../chatty-module-registry" }
chatty-protocol-gateway = { path = "../chatty-protocol-gateway" }
chatty-wasm-runtime = { path = "../chatty-wasm-runtime" }

# GPUI framework
gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true

# Core dependencies (needed directly by GPUI layer)
rig-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
dirs.workspace = true
uuid.workspace = true
futures.workspace = true
anyhow.workspace = true
regex.workspace = true
base64.workspace = true
reqwest.workspace = true
similar.workspace = true

# Auto-updater
semver.workspace = true
tempfile.workspace = true
sha2.workspace = true
hex.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true

# Asset embedding
rust-embed.workspace = true

# Syntax highlighting
ropey.workspace = true

[build-dependencies]
# Windows icon embedding
winres = "0.1"
# Pdfium library download
reqwest = { version = "0.13.2", features = ["blocking", "rustls"] }
flate2 = "1.0"
tar = "0.4"

[features]
default = ["mcp"]
mcp = ["chatty-core/mcp", "rig-core/rmcp"]
subtle_guidance_v1 = []
