[package]
name = "chatty-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "chatty-tui"
path = "src/main.rs"

[dependencies]
chatty-core = { path = "../chatty-core" }

# LLM framework (needed for rig types used in chatty-core's API)
rig-core.workspace = true

# TUI framework
ratatui.workspace = true
crossterm.workspace = true
tui-textarea.workspace = true
clap.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
anyhow.workspace = true
dirs.workspace = true
uuid.workspace = true
chrono.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = ["mcp"]
mcp = ["chatty-core/mcp"]
