[package]
name = "hive-client"
version.workspace = true
edition.workspace = true
description = "Open-source client library for the Hive module registry — search, browse, download and verify modules"

[lib]
name = "hive_client"
path = "src/lib.rs"

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true, features = ["time", "sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde", "now"] }
uuid = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
percent-encoding = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
tempfile = { workspace = true }
rand = "0.8"
