[package]
name = "{{project-name}}"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chatty-module-sdk = { git = "https://github.com/boersmamarcel/chatty2.git", rev = "ad6eabe" }
serde_json = "1"

# Standalone crate — intentionally NOT part of the main chatty workspace.
# Compiles to wasm32-wasip2; see .cargo/config.toml for the default target.
[workspace]
